<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ActivityMain">

    <item
        android:id="@+id/action_done"
        app:showAsAction="ifRoom"
        android:imeOptions="actionDone"
        android:icon="@drawable/ic_toolbar_done"
        android:title="@string/ic_ok"/>

    <item
       android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort"
        android:title="@string/action_sort"
        android:orderInCategory="50"
        app:showAsAction="never" />

</menu>