<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Count.FragCountNiv">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="start"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            android:text="@string/t_v_first_lev_ref" />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_text_Rp_height">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/first_lr_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:singleLine="true"
            android:imeOptions="actionDone"/>
            <TextView
                android:id="@+id/view_lr_first"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="-8dp"
                android:layout_gravity="start"
                android:paddingStart="5dp"
                android:textSize="12sp"
                android:textColor="@color/red_color"
                android:text="@string/alert_format_text" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_imp_fst_lr"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/but_import_lev_ref"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/light_grey"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_st"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/but_add_station"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/count_niv"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/button_label_enabled_Count"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="start"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            android:text="@string/t_v_second_lev_ref" />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_text_Rp_height">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/second_lr_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:singleLine="true"
                android:imeOptions="actionDone"/>
            <TextView
                android:id="@+id/view_lr_second"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="-8dp"
                android:layout_gravity="start"
                android:paddingStart="5dp"
                android:textSize="12sp"
                android:textColor="@color/red_color"
                android:text="@string/alert_format_text" />
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_point"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/but_equalise"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_imp_sec_lr"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/but_import_lev_ref"/>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </LinearLayout>
    </ScrollView>
</FrameLayout>