<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Count.FragCountElev">
    <ScrollView
        android:id="@+id/myview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:padding="15dp">
       <RadioGroup
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:checkedButton="@+id/first"
           android:orientation="vertical">
           <RadioButton
               android:id="@+id/first"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:padding="5dp"
               android:text="@string/Title_text_Count_Point_Height"/>
           <RadioButton
               android:id="@+id/second"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:padding="5dp"
               android:text="@string/Title_text_Count_Point_Report"/>
       </RadioGroup>
       <TextView
           android:id="@+id/text_view_HeightCount"
           android:layout_height="wrap_content"
           android:layout_width="match_parent"
           android:gravity="center"
           android:layout_marginTop="15dp"
           android:textSize="18sp"
           android:text="@string/Title_text_Count_Point_Height" />

       <com.google.android.material.textfield.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/hint_text_Rp_height">
           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/RpHeight1"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="10dp"
               android:singleLine="true"
               android:imeOptions="actionNext"/>
       </com.google.android.material.textfield.TextInputLayout>
       <TextView
           android:id="@+id/view_HeightRpReport"
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:layout_marginTop="-8dp"
           android:layout_gravity="start"
           android:paddingStart="5dp"
           android:textSize="12sp"
           android:textColor="@color/red_color"
           android:text="@string/alert_format_text"
           />
       <com.google.android.material.textfield.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/hint_text_Report_Rp">
           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/RpReport1"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="10dp"
               android:singleLine="true"
               android:imeOptions="actionNext"/>
       </com.google.android.material.textfield.TextInputLayout>
       <TextView
           android:id="@+id/view_RpReport1"
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:layout_marginTop="-8dp"
           android:layout_gravity="start"
           android:paddingStart="5dp"
           android:textSize="12sp"
           android:textColor="@color/red_color"
           android:text="@string/alert_format_text" />

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/point"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/hint_text_Report_Point">
           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/PointReport1"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="10dp"
               android:singleLine="true"
               android:imeOptions="actionDone"/>
       </com.google.android.material.textfield.TextInputLayout>
       <TextView
           android:id="@+id/view_Report_Point"
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:layout_marginTop="-8dp"
           android:layout_gravity="start"
           android:paddingStart="5dp"
           android:textSize="12sp"
           android:textColor="@color/red_color"
           android:text="@string/alert_format_text" />
       <androidx.coordinatorlayout.widget.CoordinatorLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <TextView
               android:id="@+id/text_result"
               android:layout_height="wrap_content"
               android:layout_width="wrap_content"
               android:layout_gravity="start"
               android:padding="10dp"
               android:textSize="18sp"
               android:text="@string/Result_point_M" />
           <TextView
               android:id="@+id/result_Point_height"
               android:layout_height="wrap_content"
               android:layout_width="wrap_content"
               android:layout_marginLeft="70dp"
               android:padding="10dp"
               android:layout_gravity="center"
               android:textSize="18sp" />
           <com.google.android.material.button.MaterialButton
               android:id="@+id/count_point_height"
               style="@style/Widget.MaterialComponents.Button"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="right"
               android:text="@string/button_label_enabled_Count"/>
       </androidx.coordinatorlayout.widget.CoordinatorLayout>
   </LinearLayout>

    </ScrollView>
</FrameLayout>